# deepSORT-ROS-Noetic

./: README.md
src/tracker/: CMakeLists.txt  package.xml
src/tracker/include/tracker/: deepsort.h
src/tracker/launch/: tracker.launch
src/tracker/src/: deepsort.cpp  tracker_node.cpp
src/usb_cam-develop/src/: usb_cam.cpp
